// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes should be in the correct format 1`] = `
Array [
  Object {
    "component": [Function],
    "exact": true,
    "icon": "Apphub",
    "key": "home",
    "meta": Object {
      "desc": "Central location for CDT ODI applications",
      "keywords": "App, Hub",
      "title": "App Hub",
    },
    "name": "App Hub",
    "path": "/",
  },
  Object {
    "component": [Function],
    "exact": false,
    "icon": "Pas",
    "key": "pas",
    "meta": Object {
      "desc": "Personal Authorization Access System",
      "keywords": "tracking, access, authorization",
      "title": "PAS",
    },
    "name": "PAS",
    "path": "/pas",
    "roles": Array [
      "PAAS Manager",
      "PAAS Security",
      "PAAS HR",
    ],
  },
  Object {
    "component": [Function],
    "exact": false,
    "icon": "Spa",
    "key": "spa",
    "meta": Object {
      "desc": "Security Policy Acknowledgement",
      "keywords": "SPA",
      "title": "SPA",
    },
    "name": "SPA",
    "path": "/spa",
  },
  Object {
    "href": "https://cold.govops.ca.gov/",
    "icon": "COLD",
    "key": "cold",
    "meta": Object {
      "desc": "",
      "keywords": "",
      "title": "COLD",
    },
    "name": "COLD",
  },
  Object {
    "href": "http://bars.technology.ca.gov/",
    "icon": "BARS",
    "key": "bars",
    "meta": Object {
      "desc": "Badge Access Request System",
      "keywords": "badge, employee, new, student, request",
      "title": "BARS",
    },
    "name": "BARS",
  },
  Object {
    "href": "http://employeedirectory/",
    "icon": "ED",
    "key": "ed",
    "meta": Object {
      "desc": "Employee Directory",
      "keywords": "Employee, Directory, Lookup",
      "title": "ED",
    },
    "name": "ED",
  },
]
`;

exports[`routes should be in the correct format 2`] = `
Array [
  Object {
    "component": [Function],
    "exact": false,
    "icon": "Pas",
    "key": "pas",
    "meta": Object {
      "desc": "Personal Authorization Access System",
      "keywords": "tracking, access, authorization",
      "title": "PAS",
    },
    "name": "PAS",
    "path": "/pas",
    "roles": Array [
      "PAAS Manager",
      "PAAS Security",
      "PAAS HR",
    ],
  },
  Object {
    "component": [Function],
    "exact": false,
    "icon": "Spa",
    "key": "spa",
    "meta": Object {
      "desc": "Security Policy Acknowledgement",
      "keywords": "SPA",
      "title": "SPA",
    },
    "name": "SPA",
    "path": "/spa",
  },
  Object {
    "href": "https://cold.govops.ca.gov/",
    "icon": "COLD",
    "key": "cold",
    "meta": Object {
      "desc": "",
      "keywords": "",
      "title": "COLD",
    },
    "name": "COLD",
  },
  Object {
    "href": "http://bars.technology.ca.gov/",
    "icon": "BARS",
    "key": "bars",
    "meta": Object {
      "desc": "Badge Access Request System",
      "keywords": "badge, employee, new, student, request",
      "title": "BARS",
    },
    "name": "BARS",
  },
  Object {
    "href": "http://employeedirectory/",
    "icon": "ED",
    "key": "ed",
    "meta": Object {
      "desc": "Employee Directory",
      "keywords": "Employee, Directory, Lookup",
      "title": "ED",
    },
    "name": "ED",
  },
]
`;
